# svm-2.7.20241107

./: AUTHORS  Makefile.am  Makefile.in  README.md  acinclude.m4  config.h.in  configure  configure.ac  valgrind.supp
.swm/: basic-concepts-of-automate-in-machine-extensions.afjo7883.sw.md  basic-concepts-of-interruption-handling.49byw9es.sw.md  basic-concepts-of-interruption-management.7r4ayirv.sw.md  basic-concepts-of-process-management.j4zgn08o.sw.md  building-the-analyseur-directory-with-makefile.4nspjmdv.sw.md  building-the-analyseur-extension-with-makefile.m6tjvizf.sw.md  building-the-base-elements-with-makefile.934iayy2.sw.md  building-the-binaire-directory-with-makefile.vqcu0055.sw.md  building-the-debugger-with-makefile.fweaxxh8.sw.md  building-the-demarrage-directory-with-makefile.hjyzrzsg.sw.md  building-the-elements-directory-with-makefile.j1oy9crn.sw.md  building-the-extensions-with-makefile.ecp6j8pv.sw.md  building-the-gestionnaire-extension-with-makefile.s2754kd7.sw.md  building-the-global-directory-with-makefile.mkpy7g7c.sw.md  building-the-interruption-component-with-makefile.8qom7z16.sw.md  building-the-lanceur-directory-with-makefile.k6btjpbl.sw.md  building-the-noyau-directory-with-makefile.xzy77i4p.sw.md  building-the-ordonnanceur-directory-with-makefile.dkdhmrt9.sw.md  building-the-processeur-directory-with-makefile.m374v463.sw.md  building-the-processus-directory-with-makefile.78uk2z3c.sw.md  building-the-programme-directory-with-makefile.2yjx1z71.sw.md  building-the-sequenceur-component-with-makefile.nwef3oik.sw.md  building-the-systeme-directory-with-makefile.9a1j3rei.sw.md  building-the-valeur-elements-with-makefile.pd6xfwm7.sw.md  client-connection-and-communication-flow.670rw5iy.sw.md  debugger-overview.fw15ps61.sw.md  execution-flow-overview.4nox7qvw.sw.md  execution-flow-overview.6bo3ee6j.sw.md  execution-flow-overview.6h53026n.sw.md  exploring-installation-in-global-configuration.jpoh4s5c.sw.md  exploring-the-systeme-component.2xo6jcmj.sw.md  getting-started-with-analysis-in-machine-debugging.frqx9bxv.sw.md  getting-started-with-noyau-core-component.x4ayv3kw.sw.md  global-configuration-overview.nximdfi1.sw.md  (+56 more)
debug/: Makefile.am  Makefile.in  controler.js  index.html  security.js  seqdiag.js  views.js  windows.js
debug/styles/: Makefile.am  Makefile.in  liste_styles  styles.cpp  styles.h
debug/styles/default/: Makefile.am  Makefile.in  default.css  mono.css  style.css
debug/styles/rounded/: Makefile.am  Makefile.in  amber.css  default.css  forest.css  night.css  style.css
doc/editeurs/vim/: Makefile.am  Makefile.in  filetype.vim  svm.vim  svm_log.vim  svm_plugin.vim
doc/man/: Makefile.am  Makefile.in  svm.man  svm_plugin.man  svm_plugin_bool.man  svm_plugin_com.man  svm_plugin_int.man  svm_plugin_math.man  svm_plugin_mem.man  svm_plugin_plugin.man  svm_plugin_real.man  svm_plugin_run.man  svm_plugin_str.man  svm_plugin_type.man
src/demarrage/lanceur/analyseur/: Makefile.am  Makefile.in  analyseur.cpp  analyseur.h  analyseur.lex.cpp  analyseur.lex.lpp  analyseur.syn.cpp  analyseur.syn.hpp  analyseur.syn.ypp  includes.h
src/extensions/: Makefile.am  Makefile.in  bool.cpp  com.cpp  int.cpp  math.cpp  mem.cpp  plugin.cpp  real.cpp  run.cpp  str.cpp  type.cpp
src/machine/elements/memoire/: Makefile.am  Makefile.in  bibliotheque.cpp  bibliotheque.h  booleen.cpp  booleen.h  chaine.cpp  chaine.h  descriptionbloc.cpp  descriptionbloc.h  element.cpp  element.h  entier.cpp  entier.h  extension.cpp  extension.h  interruption.cpp  interruption.h  memoire.cpp  memoire.h  point_entree_extension.cpp  point_entree_extension.h  pointeur.cpp  pointeur.h  symbole.cpp  symbole.h  type.cpp  type.h  valeur.cpp  valeur.h
src/machine/elements/processeur/: Makefile.am  Makefile.in  etat.cpp  etat.h  interruptions.cpp  interruptions.h  processeur.cpp  processeur.h
src/machine/elements/processeur/instructions/: Makefile.am  Makefile.in  affectation.cpp  affectation.h  appel.cpp  appel.h  arret.cpp  arret.h  bibliotheque.cpp  bibliotheque.h  conditions.cpp  conditions.h  debogage.cpp  debogage.h  decalage.cpp  decalage.h  drapeau.cpp  drapeau.h  extension.cpp  extension.h  interruption.cpp  interruption.h  local.cpp  local.h  memoire.cpp  memoire.h  retour.cpp  retour.h  saut.cpp  saut.h
src/machine/elements/valeur/: Makefile.am  Makefile.in  adresse_instruction.cpp  adresse_instruction.h  arbre_substitution.cpp  arbre_substitution.h  arret.cpp  arret.h  code.cpp  code.h  comparaison.cpp  comparaison.h  decorateur.h  exception.cpp  exception.h  expression_condition.cpp  expression_condition.h  instruction.cpp  instruction.h  interruption.cpp  interruption.h  parametre.cpp  parametre.h  point_entree_extension.cpp  point_entree_extension.h  pointeur.cpp  pointeur.h  position_instruction.cpp  position_instruction.h
src/machine/extensions/: Makefile.am  Makefile.in  automate_deterministe.cpp  automate_deterministe.h  automate_non_deterministe.cpp  automate_non_deterministe.h  description.cpp  description.h  patron_objet_extension.cpp  patron_objet_extension.h  reference_objet.cpp  reference_objet.h
src/machine/extensions/analyseur/: Makefile.am  Makefile.in  analyseur.cpp  analyseur.h  analyseur.lex.cpp  analyseur.lex.lpp  analyseur.syn.cpp  analyseur.syn.hpp  analyseur.syn.ypp  includes.h
src/machine/extensions/gestionnaire/: Makefile.am  Makefile.in  gestionnaire.cpp  gestionnaire.h
src/machine/interface/: Doxyfile  Makefile.am  Makefile.in  database_api  environnement.cpp  environnement.h  fonction.cpp  fonction.h  signature_api  structure.cpp  structure.h  svm.cpp  svm.h  svm_compatibility.h  svm_plugin.vim  variable.cpp  variable.h  vim_syntax
src/machine/machine/: Makefile.am  Makefile.in  demarrage.cpp  demarrage.h  historique.cpp  historique.h  machine.cpp  machine.h
src/outils/: Makefile.am  Makefile.in  outils.cpp  outils.h  svm_config.cpp  svm_plugin.cpp
src/outils/analyseur/: Makefile.am  Makefile.in  analyseur.cpp  analyseur.h  analyseur.lex.cpp  analyseur.lex.lpp  analyseur.syn.cpp  analyseur.syn.hpp  analyseur.syn.ypp  includes.h
(+130 files in other folders)
