# 
# Simple Virtual Machine - A versatile and robust architecture to
# easily write applications.
# Copyright (C) 2021  Julien BRUGUIER
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
# 

AM_CPPFLAGS=-I${top_builddir} -I${top_srcdir}

pkgdebugstylesroundeddir=$(pkgdatadir)/debug/styles/rounded

dist_pkgdebugstylesrounded_DATA= style.css default.css amber.css forest.css night.css breakpoint.png cannot-open.png cursor.png delete.png desktop.png follow.png index.png invalid.png menu.png open.png processor-function.png processor-instruction.png processor-pause.png processor-return.png processor-run.png window-alarm-active.png window-alarm.png window-alarm-selected-active.png window-alarm-selected.png window-close.png window-close-selected.png window-help.png window-help-selected.png window-hide.png window-hide-selected.png
