# 
# Simple Virtual Machine - A versatile and robust architecture to
# easily write applications.
# Copyright (C) 2021  Julien BRUGUIER
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
# 

AM_CPPFLAGS=-I${top_builddir} -I${top_srcdir}

SUBDIRS= 

noinst_LTLIBRARIES=libmachineelementsmemoire.la

libmachineelementsmemoire_la_SOURCES=bibliotheque.cpp bibliotheque.h booleen.cpp booleen.h chaine.cpp chaine.h descriptionbloc.cpp descriptionbloc.h element.cpp element.h entier.cpp entier.h extension.cpp extension.h interruption.cpp interruption.h memoire.cpp memoire.h point_entree_extension.cpp point_entree_extension.h pointeur.cpp pointeur.h symbole.cpp symbole.h type.cpp type.h valeur.cpp valeur.h 
libmachineelementsmemoire_la_LIBADD=
libmachineelementsmemoire_la_LDFLAGS=-no-undefined
