# 
# Simple Virtual Machine - A versatile and robust architecture to
# easily write applications.
# Copyright (C) 2021  Julien BRUGUIER
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
# 

AM_CPPFLAGS=-I${top_builddir} -I${top_srcdir}

SUBDIRS= 

noinst_LTLIBRARIES=libmachineelementsvaleur.la

libmachineelementsvaleur_la_SOURCES=adresse_instruction.cpp adresse_instruction.h arbre_substitution.cpp arbre_substitution.h arret.cpp arret.h code.cpp code.h comparaison.cpp comparaison.h decorateur.h exception.cpp exception.h expression_condition.cpp expression_condition.h instruction.cpp instruction.h interruption.cpp interruption.h parametre.cpp parametre.h point_entree_extension.cpp point_entree_extension.h pointeur.cpp pointeur.h position_instruction.cpp position_instruction.h 
libmachineelementsvaleur_la_LIBADD=
libmachineelementsvaleur_la_LDFLAGS=-no-undefined
